@@ -3,6 +3,8 @@
 	* Various configuration fixes to ensure a good bgl ion build.
 
 	* Renamed gendersllnl config module the chaos config module.
+
+	* Added bgl config module.
 	
 2005-08-17  Albert Chu  <chu11@llnl.gov>
 
